	  by disabling the upper-bound check that is only applied during the base
	  pitch calculations by modern units. Specifically, this fixes the "starfall"
	  timbre playing at wrong pitch in the WILLY BEAMISH intro when using
	  ROMs of the MT-32 GEN0 (discovered by eddieduff at Sourceforge).
	* Fixed compilation errors when setting various preprocessor definitions
	  intended for debugging.

2017-12-24:

	2.3.0 released.

	* Improved emulation of partial allocator. It still handles individual partials as entities and not pairs,
	  but now it keeps inactive partials on a stack rather than assigns the first free partial sorted by index.
	  This behaviour better corresponds to how the real units allocate partials though.
	* Fixed various issues with accessing ROM files with localised pathnames.
	* Fixed old thinko about MIDI channel mapping when a MIDI channel is assigned to multiple parts.
	  In this case, the messages received on that MIDI channel are now handled by all the parts.
	* Changed semantic of the build option libmt32emu_WITH_INTERNAL_RESAMPLER. When disabled, the built-in
	  resampler support is no longer included in the build implicitly. In case no external resampler library is
	  found, a simple stub is used instead, that either outputs at the internal synth sample rate or is muted.
	  This is mainly intended to reduce the library size when the sample rate conversion is handled externally.

2017-07-29:

	2.2.0 released.

	* Added emulation of a number of MT-32 GEN0 quirks that is enabled when loading e.g. Control ROM v1.07,
	  so many patches specific for old MT-32 are now played correctly. Thanks go to NewRisingSun for providing
	  the test set of those patches. See http://www.vogons.org/viewtopic.php?p=578873#p578873 for more details.
	* Fixed sample format conversion implementation, so that integer samples are converted to normalised
	  float samples as well as float samples are still converted to full-range integer ones.